--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "jquery": "^3.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
